--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -68,7 +68,7 @@
   }
 
   & .checkbox {
-    color: $text_link;
+    color: #669acb;
   }
 
   & > div {
@@ -95,7 +95,7 @@
   border-bottom: 1px dotted #DDD;
 
   & a {
-    color : text_link;
+    color : #669acb;
     font-size: 14px;
   }
 
