--- a/app/views/layouts/_html_head.html.erb
+++ b/app/views/layouts/_html_head.html.erb
@@ -19,9 +19,31 @@
   <% end %>
 
   <% if Settings.instance.environment.eql?('production') %>
-    <script src="/assets/google.js"></script>
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', '<%= Settings.instance.ga_account %>']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+        function page_view(path){
+          if (_gaq){
+            _gaq.push(['_trackPageview', path]);
+          } else {
+            ga('send', 'pageview', path);
+          }
+        }
+    </script>
   <% else %>
-    <script src="/assets/google_empty.js"></script>
+    <script type="text/javascript">
+      function page_view(path){
+        // keep this method to prevent JS errors
+      }
+    </script>
   <% end %>
 
   <% if current_page?( root_path ) || current_page?( enterprise_path ) %>
