--- a/app/views/organisations/new.html.erb
+++ b/app/views/organisations/new.html.erb
@@ -17,6 +17,16 @@
           <%= f.text_field :name, :id => "name", :class => 'form-control' %>
         </div>
       </div>
+      <script type="text/javascript">
+        $( "#name" ).keyup(function(e) {
+          if( this.value.indexOf('.') != -1 ){
+            this.value = this.value.replace(".", "")
+          }
+          if( this.value.indexOf(' ') != -1 ){
+            this.value = this.value.replace(" ", "")
+          }
+        });
+      </script>
 
       <div class="form-group">
         <%= f.label :company, :class => "control-label", :for => "company" %>
