--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -21,7 +21,7 @@
     <div class="content_header_def">
       <div id="project-title">
         <span class = "namelabel" >
-          <b>Name:</b> <%= @project.name %>
+          <b>Name:</b> <%= @project.name %> (<%= @project.ids %>)
         </span>
         <% if @project.public == false %>
           <span class="fa fa-lock" title="Private VersionEye Project"></span>
