--- a/app/views/shared/_header_logo.html.erb
+++ b/app/views/shared/_header_logo.html.erb
@@ -1,9 +1,7 @@
-<% if signed_in? %>
-  <% if Rails.env.enterprise? %>
-    <%= link_to image_tag("verisoneye-logo-small.png", :class => 'logo_small'), settings_emails_path, :rel => "nofollow" %>
-  <% else %>
-    <%= link_to image_tag("verisoneye-logo-small.png", :class => 'logo_small'), user_projects_path, :rel => "nofollow" %>
-  <% end %>
+<% if signed_in_admin? %>
+  <%= link_to image_tag("verisoneye-logo-small.png", :class => 'logo_small'), settings_globalsettings_path, :rel => "nofollow" %>
+<% elsif signed_in? %>
+  <%= link_to image_tag("verisoneye-logo-small.png", :class => 'logo_small'), user_projects_path, :rel => "nofollow" %>
 <% else %>
   <a href="/" >
     <%= image_tag "verisoneye-logo-small.png", :class => 'logo_small' %>
