--- a/app/views/user/projects/helpers/_project_dependency_row.html.erb
+++ b/app/views/user/projects/helpers/_project_dependency_row.html.erb
@@ -2,7 +2,11 @@
 <tr class="flash <%= dep[:status_class] || 'info' %> dep_row" id="<%= dep.id.to_s %>__row"  >
   <td style="padding-left: 5px;">
     <span >
-      <% if dep.known? %>
+      <% if !dep.ext_link.to_s.empty? %>
+        <a class="#a dep_link" href="<%= dep.ext_link %>" >
+          <span><%= dep.name %></span>
+        </a>
+      <% elsif dep.known? %>
         <a class="#a dep_link" href="<%= product_version_path( product, dep.version_requested ) %>" >
           <span><%= product.name %></span>
         </a>
@@ -27,7 +31,7 @@
     <%= dep.version_current || "UNKNOWN" %>
   </td>
   <td style="padding-right: 5px;">
-    <% unless dep.unknown? %>
+    <% if dep.unknown? == false && dep.ext_link.to_s.empty? %>
         <%= render partial: "shared/product_follow_mini",
                    locals: {product: product, user: current_user} %>
     <% end %>
