--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -12,7 +12,7 @@
 
   <% this_color_class = 'info' %>
   <% this_color_class = 'success' if @version && @version.semver_2 %>
-  <% this_color_class = 'error' if @version && !@version.semver_2 %>
+  <% this_color_class = 'error' if @version && @version.semver_2.nil? %>
   <div class="kpi_box flash <%= this_color_class %>" style="margin-bottom: 5px;">
     <div>
       <b>This:</b> <%= @product.version %>
