--- a/app/views/user/projects/helpers/_project_source.html.erb
+++ b/app/views/user/projects/helpers/_project_source.html.erb
@@ -31,4 +31,4 @@
         (Version: <%= project.version %>)
       <% end %>
     <% end %>
-    Last updated at <span>"<%= project.updated_at.strftime("%b %d, %Y - %H:%M") %>"</span>.
+    Last checked at <span>"<%= project.updated_at.strftime("%b %d, %Y - %H:%M") %>"</span>.
