--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -149,7 +149,7 @@
               <ul>
                 <li><a href="https://github.com/versioneye/versioneye_maven_plugin" target="VMP">VersionEye Maven Plugin</a></li>
                 <li><a href="https://github.com/versioneye/versioneye_sbt_plugin"   target="VSP">VersionEye SBT Plugin</a></li>
-                <li><a href="https://github.com/stempler/gradle-versioneye-plugin"  target="VGP">Gradle VersionEye Plugin</a></li>
+                <li><a href="https://github.com/stempler/gradle-versioneye-plugin"  target="VGP">VersionEye Gradle Plugin</a></li>
               </ul>
             </div>
           </div>
