Update Gems. Show Berkshelf integration on LP.

--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -21,6 +21,7 @@
             <li><a href="http://www.gradleware.com/">Gradle</a> (Groovy). Try the <a href="https://github.com/stempler/gradle-versioneye-plugin">plugin</a>.</li>
             <li><a href="http://leiningen.org/">Leiningen</a> (Clojure)</li>
             <li><a href="https://www.biicode.com/">Biicode</a> (C/C++)</li>
+            <li><a href="http://berkshelf.com/">Berkshelf</a> (Chef)</li>
         </ul>
 
     </div>
