Show runtime badges for PHP Pages!

--- a/app/views/products/_product_show_packagist.html.erb
+++ b/app/views/products/_product_show_packagist.html.erb
@@ -5,6 +5,7 @@
 
 <div class="col-md-9 col-sm-8 content_head_top" >
   <%= render 'products/helpers/security_vulnerabilities' %>
+  <%= render 'products/helpers/runtime_badges' %>
   <%= render 'products/product_show_description' %>
   <%= render 'products/helpers/kpi_summary' %>
   <%= render 'products/helpers/product_show_keywords' %>
