--- a/app/views/products/helpers/_runtime_badges.html.erb
+++ b/app/views/products/helpers/_runtime_badges.html.erb
@@ -1,2 +1,6 @@
-<img id="tested_runtime_badge" src="http://php-eye.com/badge/<%= @product.prod_key %>/tested.svg?branch=<%= @version.to_s %>" alt="Tested Runtime Badge" />
-<img id="not-tested_runtime_badge" src="http://php-eye.com/badge/<%= @product.prod_key %>/not-tested.svg?branch=<%= @version.to_s %>" alt="Not Tested Runtime Badge" />
+<a href="http://php-eye.com/package/<%= @product.prod_key %>" target="php_eye">
+  <img id="tested_runtime_badge" src="http://php-eye.com/badge/<%= @product.prod_key %>/tested.svg?branch=<%= @version.to_s %>" alt="Tested Runtime Badge" />
+</a>
+<a href="http://php-eye.com/package/<%= @product.prod_key %>" target="php_eye">
+  <img id="not-tested_runtime_badge" src="http://php-eye.com/badge/<%= @product.prod_key %>/not-tested.svg?branch=<%= @version.to_s %>" alt="Not Tested Runtime Badge" />
+</a>
