Security PDF Export.

--- a/app/views/user/projects/helpers/_security.html.erb
+++ b/app/views/user/projects/helpers/_security.html.erb
@@ -1,4 +1,7 @@
 
+<div style="margin: 10px 0 7px 0;">
+  <%= link_to 'BoM Security PDF Export', sec_export_user_project_path( @project.ids ) %>
+</div>
 
 <% if @summary  %>
 
