--- a/app/views/settings/creditcard/index.html.erb
+++ b/app/views/settings/creditcard/index.html.erb
@@ -57,7 +57,7 @@
       <div class="form-group">
         <div class="control-label"></div>
         <div class="controls" >
-          <button type="submit" id="cc_submit" class="btn btn-large btn-primary" >Save</button>
+          <button type="submit" id="cc_submit" class="btn btn-large btn-primary" >Submit</button>
         </div>
       </div>
 
