--- a/app/views/license_whitelists/show.html.erb
+++ b/app/views/license_whitelists/show.html.erb
@@ -33,7 +33,7 @@
       <div class="checkbox">
         <label for="pessimistic" style="font-size: 12px;" >
           <%= check_box_tag "pessimistic", true, @license_whitelist.pessimistic_mode, :id => "pessimistic" %>
-          Pessimistic mode. If a project dependency has multiple licenses and one of them is violating this license whitelist than count the dependency as violated.
+          Pessimistic mode. If a project dependency has multiple licenses and one of them is violating this license whitelist then count the dependency as violated.
         </label>
       </div>
       <button class="btn btn-primary" type="submit" >
