Remove follow all in project view. Add Licenses

--- a/app/views/user/projects/_project_dependency_table.html.erb
+++ b/app/views/user/projects/_project_dependency_table.html.erb
@@ -5,7 +5,7 @@
         <th class="name_col_after_icon">Dependency</th>
         <th >Resolved</th>
         <th >Newest</th>
-        <th style="width: 76px;">&nbsp;</th>
+        <th >License</th>
       </tr>
     </thead>
     <tbody>
