--- a/app/views/products/_product_show_other_versions.html.erb
+++ b/app/views/products/_product_show_other_versions.html.erb
@@ -1,4 +1,5 @@
 <% if !@product.versions.nil? && @product.versions.length > 0 %>
+  <% svs = @version.security_vulnerabilities %>
   <div class="box header">
     <h3 class="side_header">
       <%= pluralize(@product.versions.count, 'Versions') %>
@@ -6,6 +7,7 @@
   </div>
   <div class="box content scrollable-box" style = "min-height: 1em; max-height: 14em;" >
     <% @product.sorted_versions.each do |version|  %>
+
       <div>
         <% if VersionTagRecognizer.release?(version.to_s) %>
           <a href="<%=product_version_path( @product, version.to_param )%>"><%=version.to_s%></a>
@@ -13,6 +15,9 @@
           <a style="color: brown" href="<%=product_version_path( @product, version.to_param )%>"><%=version.to_s%></a>
         <% end %>
         <span class="meta_text_small">(<%= version.released_or_detected.strftime("%b %d, %Y") %>)</span>
+        <% if svs && svs.affected_versions.to_a.include?( version.to_s ) %>
+          <span class="fa fa-shield" style="font-size: 180px;"></span>
+        <% end %>
       </div>
     <% end %>
   </div>
