--- a/app/views/products/_product_show_other_versions.html.erb
+++ b/app/views/products/_product_show_other_versions.html.erb
@@ -1,5 +1,5 @@
 <% if !@product.versions.nil? && @product.versions.length > 0 %>
-  <% svs = @version.security_vulnerabilities %>
+  <% svs = @product.security_vulnerabilities_all %>
   <div class="box header">
     <h3 class="side_header">
       <%= pluralize(@product.versions.count, 'Versions') %>
@@ -15,9 +15,16 @@
           <a style="color: brown" href="<%=product_version_path( @product, version.to_param )%>"><%=version.to_s%></a>
         <% end %>
         <span class="meta_text_small">(<%= version.released_or_detected.strftime("%b %d, %Y") %>)</span>
-        <% if svs && svs.affected_versions.to_a.include?( version.to_s ) %>
-          <span class="fa fa-shield" style="font-size: 180px;"></span>
+
+        <% if svs && !svs.empty? %>
+          <% svs.each do |sv| %>
+            <% sv.affected_versions.to_a.include?( version.to_s ) %>
+              <span class="fa fa-shield" style="font-size: 180px;"></span>
+              <% break %>
+            <% end %>
+          <% end %>
         <% end %>
+
       </div>
     <% end %>
   </div>
