Update link to SEEBURGER

--- a/app/views/shared/_who_is_using_it.html.erb
+++ b/app/views/shared/_who_is_using_it.html.erb
@@ -19,7 +19,7 @@
       <cite>“VersionEye Enterprise takes the use of open source in our enterprise software development to the next level, helps optimizing our processes and makes our software development even more productive than before.”</cite><br/>
       <div>
         <%= image_tag 'cites/matthias-fessenbecker_75.jpg', :class => "img-rounded" %>
-        <b>Matthias Feßenbecker (CTO @ <a href="https://www.seeburger.com">SEEBURGER</a> AG)</b>
+        <b>Matthias Feßenbecker (CTO @ <a href="http://www.seeburger.com">SEEBURGER</a> AG)</b>
       </div>
     </p>
     <p class="lead">
