--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -75,7 +75,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                        <h1>Version<span style="color: orange;">Eye</span></h1>
-                       <h3>notifies you about out-dated dependencies, security vulnerabilities and licesne violations</h3>
+                       <h3>notifies you about out-dated dependencies, security vulnerabilities and license violations</h3>
                     </div>
                 </div>
             </div>
