Add Stash to the list of SCMs.

--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -4,7 +4,7 @@
         <h2>Package Managers</h2>
 
         <p class="lead">
-            VersionEye is based on package managers. The idea behind VersionEye is that it can monitor your package managers project file(s) on GitHub/Bitbucket. That way VersionEye knows which open source dependencies you are using and based on that it can send you notifications to new versions, license violations and security vulnerabilities.
+            VersionEye is based on package managers. The idea behind VersionEye is that it can monitor your package managers project file(s) on GitHub/Bitbucket/Stash. That way VersionEye knows which open source dependencies you are using and based on that it can send you notifications to new versions, license violations and security vulnerabilities.
         </p>
         <p class="lead">
             Currently these package managers are supported:
