Remove redundant content.

--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -26,27 +26,8 @@
         <%= render "shared/feature_security" %>
     </div>
 
-
     <div class="content-section-b">
-      <div class="container">
-
-        <div >
-          <h2 class="no_margin">Who is using it?</h2>
-          <p class="cite_section">
-            <cite>“Automated version notifications of open source and self developed closed source components by VersionEye Enterprise are very helpful especially to our distributed iOS teams. They help reducing coordination and communication efforts. The VersionEye team always did a great job supporting us with individual features!”</cite><br/>
-            <div>
-              <%= image_tag 'cites/alexander-greim_75.jpg', :class => "img-rounded" %> <b>Alexander Greim (Director Mobile Engineering @ <a href="https://www.xing.com">XING</a> AG)</b>
-            </div>
-          </p>
-          <p class="lead">
-            Download the full <a href="/docs/XING-Customer-Success-Story.pdf">customer success story with XING</a>.
-          </p>
-          <p class="lead">
-            More success stories are coming soon! The other Enterprise clients are bigger than XING and that's why the approval process takes a bit longer for them.
-          </p>
-        </div>
-
-      </div>
+      <%= render "shared/who_is_using_it" %>
     </div>
 
 
