Update the landing page

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -75,7 +75,10 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                        <h1>Version<span style="color: orange;">Eye</span></h1>
-                       <h3>notifies you about out-dated dependencies, security vulnerabilities and license violations</h3>
+                       <h3>
+                        notifies you about out-dated dependencies, security vulnerabilities and license violations<br/>
+                        in your Git repositories
+                       </h3>
                     </div>
                 </div>
             </div>
@@ -113,8 +116,14 @@
         <%= render "shared/who_is_using_it" %>
     </div>
 
-
     <div class="content-section-b">
+        <div class="container" style="text-align: center;">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/z-rp2TT4aXQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+
+
+    <div class="content-section-a">
 
         <div class="container">
 
