Add link to GitHub repo to the footer.

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -20,6 +20,8 @@
   </div>
 
   <div class="footer_social_media_row" >
+    <a href="https://github.com/VersionEye" class="footer_link_margin" target="new_GitHub" title="GitHub" ><i class="fa fa-github footer_social_icon" ></i></a>
+
     <a href="https://twitter.com/VersionEye" class="footer_link_margin" target="new_Twitter" title="Twitter" ><i class="fa fa-twitter footer_social_icon" ></i></a>
 
     <a href="https://www.facebook.com/VersionEye" class="footer_link_margin" target="new_FB" title="Facebook" ><i class="fa fa-facebook footer_social_icon" ></i></a>
