Remove biicode from the footer
Because the biicode project is dead.

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -45,8 +45,7 @@
     <a href="/HTML" >HTML</a> |
     <a href="/objective-c" >Objective-C</a> |
     <a href="/clojure" >Clojure</a> |
-    <a href="/r" >R</a> |
-    <a href="/biicode" >biicode</a><br/><br/>
+    <a href="/r" >R</a>
   </div>
 
 </footer>
