--- a/app/views/shared/_about.html.erb
+++ b/app/views/shared/_about.html.erb
@@ -1,20 +1,19 @@
 <p>
 	VersionEye is a cross-platform search engine for free/libre/open source software libraries. Currently
-  we track more than <b>700K</b> free/libre/open source libraries from <b>Java</b>, <b>Ruby</b>, <b>Python</b>,
+  we track more than <b>900K</b> free/libre/open source libraries from <b>Java</b>, <b>Ruby</b>, <b>Python</b>,
   <b>Node.JS</b>, <b>PHP</b>, <b>JavaScript</b>, <b>CSS</b>, <b>Objective-C</b>, <b>R</b> and <b>Clojure</b>. Soon we will
   add .NET, Perl and other languages.
 </p>
 <p>
-  You can follow any of the <b>650K</b> free/libre/open source libraries on VersionEye and we will notify you
+  You can follow any of the <b>900K</b> free/libre/open source libraries on VersionEye and we will notify you
   as soon the next version is released. VersionEye helps you to stay up-to-date.
 </p>
 <p>
   In additional to the search and follow feature, VersionEye can actively monitor your
-  source code and notify you about outdated dependencies in your project. Beside that it
-  shows you which licenses your dependencies are using.
+  source code and notify you about outdated dependencies, security vulnerabilities and license violations in your project.
 </p>
 <p>
   VersionEye is "free software" (FLOSS). You can use it for free for your free/libre/open source projects and you are always
   in control of your data. We follow the easy-in &amp; easy-out philosophy. The VersionEye project containes
-  several code repositories. Some of them are free/libre/open source and we plan to free/libre/open source more in future.
+  several code repositories. Most of them are free/libre/open source.
 </p>
