--- a/app/views/organisations/projects.html.erb
+++ b/app/views/organisations/projects.html.erb
@@ -14,11 +14,17 @@
       <form id="form" action="<%= projects_organisation_path(@organisation) %>" method="GET" class='form-inline' style="padding: 0; margin:0;" >
         <div class="form-group" style="padding-bottom: 25px;">
 
-          <%= label_tag :team, 'Team Filter:', :class => 'control-label' %>
           <select name="team"  id="team" class="form-control" >
-            <option value="all"  >All</option>
+            <option value="all">All</option>
             <% @organisation.teams.each do |team| %>
-              <option value="<%= team.ids %>" <%= "selected" if params[:team].to_s.eql?(team.ids) %> ><%= team.name %></option>
+              <option value="<%= team.ids %>" <%= "selected" if params[:team].to_s.eql?(team.ids) %> >Team: <%= team.name %></option>
+            <% end %>
+          </select>
+
+          <select name="language"  id="language" class="form-control" >
+            <option value="all">All</option>
+            <% @organisation.unique_languages.each do |language| %>
+              <option value="<%= language %>" <%= "selected" if params[:language].to_s.eql?(language.to_s) %> >Language: <%= language %></option>
             <% end %>
           </select>
 
